# fatcrash

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
analysis/: accuracy_report.py
data/sample/: btc_daily.csv  gbpusd_daily.csv  gold_daily.csv  known_crashes.json  macro_signals.csv  spy_daily.csv
notebooks/: 01_data_exploration.ipynb  02_lppls_bubble_detection.ipynb  03_evt_tail_risk.ipynb  04_hill_kappa_analysis.ipynb  05_multiscale_detection.ipynb  06_signal_aggregation.ipynb  07_deep_lppls.ipynb  08_historical_backtest.ipynb  09_methods_comparison.ipynb  10_dtcai.ipynb
python/fatcrash/: __init__.py  _core.pyi
python/fatcrash/aggregator/: calibration.py  signals.py
python/fatcrash/cli/: main.py
python/fatcrash/data/: cache.py  ingest.py  transforms.py
python/fatcrash/indicators/: __init__.py  bubble_indicator.py  deep_lppls.py  evt_indicator.py  lppls_indicator.py  tail_indicator.py  vol_indicator.py
python/fatcrash/nn/: __init__.py  crash_labels.py  dtcai.py  dtcai_data.py  hlppl.py  lppls_torch.py  mlnn.py  plnn.py  sentiment.py  synthetic.py
python/fatcrash/service/: server.py
python/fatcrash/viz/: charts.py  evt_plots.py  tail_dashboard.py
rust/src/: lib.rs  multiscale.rs  utils.rs
rust/src/bubble/: gsadf.rs  mod.rs
rust/src/evt/: gev.rs  gpd.rs  mod.rs
rust/src/lppls/: confidence.rs  filter.rs  fitter.rs  (+3 more)
tests/python/: test_dtcai.py  test_hlppl.py  test_methods_comparison.py  test_mlnn.py  test_new_methods.py  test_plnn.py  test_rust_bridge.py  test_synthetic.py  test_transforms.py
(+12 files in other folders)
