[package]
name = "fatcrash"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
path = "rust/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
nalgebra = "0.33"
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"

[profile.release]
lto = true
codegen-units = 1
